# botop_ws

./: Botop_ws.files  CMakeLists.txt  Joint_0.txt  Joint_1.txt  Joint_2.txt  Joint_3.txt  Joint_4.txt  Joint_5.txt  Joint_6.txt  Markov_beta_withoutHis.txt  NMF_beta.txt  NMF_beta_1.txt  NMF_beta_2.txt  NMF_beta_3.txt  NMF_beta_4.txt  NMF_beta_5.txt  Param_NonMarkovianRR.txt  README.md  franka.cpp  getTrackingdata.cpp  help.h  main.cpp  net.cpp  rai.cfg
Regression_weight/: Tri_feature_decoupling.txt  last3_net.0.bias.txt  last3_net.0.weight.txt  last3_net.2.bias.txt  last3_net.2.weight.txt  last3_net.4.bias.txt  last3_net.4.weight.txt  last_3_joint_RR.txt  net.0.bias.txt  net.0.weight.txt  net.2.bias.txt  net.2.weight.txt  net.4.bias.txt  net.4.weight.txt
traj0/: dq.txt  q0.txt
traj1/: ddq.txt  dq.txt  q0.txt
traj2/: ddq.txt  dq.txt  q0.txt
traj3/: ddq.txt  dq.txt  q0.txt
traj4/: ddq.txt  dq.txt  q0.txt
traj5/: ddq.txt  dq.txt  q0.txt
traj6/: ddq.txt  dq.txt  q0.txt  t.txt
traj7/: ddq.txt  dq.txt  q0.txt
weights/: Tri_feature_decoupling.txt  last3_net.0.bias.txt  last3_net.0.weight.txt  net.0.bias.txt  net.0.weight.txt  net.2.weight.txt  net.4.bias.txt  net.4.weight.txt
